--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-<app-graphr id="test1" [data]="data" type="area" [options]="options"></app-graphr>
+<app-graphr id="test1" [data]="data" type="world-heat-map" [options]="options"></app-graphr>
 
